--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@global-cache/core",
+  "name": "@woom-cache/core",
   "description": "Key-value cache for sharing data between parallel workers.",
   "version": "0.3.2",
   "type": "commonjs",
